--- a/templates/administration/add_student.html
+++ b/templates/administration/add_student.html
@@ -6,7 +6,7 @@
 
 <div class="min-h-screen bg-background text-primary-foreground flex flex-col items-center justify-center">
     <h1 class="text-3xl font-bold my-8">Student Information Form</h1>
-    <form action="{% url 'add_student' user_id=user.id %}" method="post" enctype="multipart/form-data" class="bg-card p-8 rounded-lg shadow-lg w-full max-w-md">
+    <form action="{% url 'add_student' user.id %}" method="post" enctype="multipart/form-data" class="bg-card p-8 rounded-lg shadow-lg w-full max-w-md">
         {% if form.non_field_errors %}
             <h3 class="text-2xl font-semibold text-primary text-center mb-6">{{ form.non_field_errors }}</h3>
         {% endif %}
