--- a/templates/dashboards/base.html
+++ b/templates/dashboards/base.html
@@ -16,5 +16,6 @@
 {%endblock content%}
 
 <script src="{%static 'js/script.js'%}"></script>
+<script src="https://kit.fontawesome.com/6f961eaa51.js" crossorigin="anonymous"></script>
 </body>
 </html>
