--- a/templates/dashboards/dashboard.html
+++ b/templates/dashboards/dashboard.html
@@ -17,25 +17,25 @@
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bxs-shopping-bag-alt' ></i>
+                    <i class='bx bxs-group' ></i>
                     <span class="text">My Students</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-doughnut-chart' ></i>
+                    <i class='bx bxs-user-rectangle'></i>
                     <span class="text">My Teachers</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bxs-message-dots' ></i>
+                    <i class='bx bxs-building-house' ></i>
                     <span class="text">All Classes</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bxs-group' ></i>
+                    <i class='bx bxs-time'></i>
                     <span class="text">Pending Users</span>
                 </a>
             </li>
@@ -44,12 +44,12 @@
         <ul class="side-menu">
         <li>
             <a href="#">
-                <i class='bx bxs-cog' ></i>
+                <i class='bx bxs-book-reader' ></i>
                 <span class="text">Announcements</span>
             </a>
         </li>
         <li>
-            <a href="#" class="logout">
+            <a href="{%url 'logout'%}" class="logout">
                 <i class='bx bxs-log-out-circle' ></i>
                 <span class="text">Logout</span>
             </a>
