--- a/templates/dashboards/students.html
+++ b/templates/dashboards/students.html
@@ -17,19 +17,25 @@
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bxs-shopping-bag-alt' ></i>
+                    <i class='bx bx-table' ></i>
                     <span class="text">My Timetable</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-doughnut-chart' ></i>
+                    <i class='bx bxs-user-rectangle'></i>
                     <span class="text">My Teachers</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bxs-message-dots' ></i>
+                    <i class='bx bxs-book-open' ></i>
+                    <span class="text">Attendance Record</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class='bx bxs-edit-alt'></i>
                     <span class="text">My grades</span>
                 </a>
             </li>
@@ -38,12 +44,12 @@
         <ul class="side-menu">
         <li>
             <a href="#">
-                <i class='bx bxs-cog' ></i>
+                <i class='bx bxs-book-reader' ></i>
                 <span class="text">Announcements</span>
             </a>
         </li>
         <li>
-            <a href="#" class="logout">
+            <a href="{%url 'logout'%}" class="logout">
                 <i class='bx bxs-log-out-circle' ></i>
                 <span class="text">Logout</span>
             </a>
