--- a/templates/dashboards/teachers.html
+++ b/templates/dashboards/teachers.html
@@ -17,19 +17,19 @@
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bxs-shopping-bag-alt' ></i>
+                    <i class='bx bxs-building-house' ></i>
                     <span class="text">My Classes</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-doughnut-chart' ></i>
+                    <i class='bx bxs-book-open' ></i>
                     <span class="text">Attendance Record</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bxs-message-dots' ></i>
+                    <i class='bx bxs-edit-alt'></i>
                     <span class="text">Grades</span>
                 </a>
             </li>
@@ -38,12 +38,12 @@
         <ul class="side-menu">
         <li>
             <a href="#">
-                <i class='bx bxs-cog' ></i>
+                <i class='bx bxs-book-reader' ></i>
                 <span class="text">Announcements</span>
             </a>
         </li>
         <li>
-            <a href="#" class="logout">
+            <a href="{%url 'logout'%}" class="logout">
                 <i class='bx bxs-log-out-circle' ></i>
                 <span class="text">Logout</span>
             </a>
@@ -70,7 +70,7 @@
                 <span class="num">8</span>
             </a>
             <a href="#" class="profile">
-                <img src="{%static 'img/449181880_1484650349104562_652231313086318225_n.jpg'%}" alt="">
+                <img src="{{ request.user.teacher_profile.profile_photo.url }}" alt="Profile Photo">
             </a>
          </nav>
         <!-- END OF NAVBAR -->
@@ -113,10 +113,10 @@
             
             <div class="table-data">
                 <div class="order">
-                    <h2 id="welcome">WELCOME</h2>
+                    <h2 id="welcome">WELCOME {{ user.first_name|upper }}</h2>
                     <div id="welcome">
                         <div>
-                            <h1>HELLO JOHN WELCOME TO YOUR SCHOOL DASHBOARD</h1>
+                            <h1>HELLO {{ user.first_name|upper }} WELCOME TO YOUR SCHOOL DASHBOARD</h1>
                         </div>
                     </div>
             </div>
