--- a/templates/administration/dashboard.html
+++ b/templates/administration/dashboard.html
@@ -131,65 +131,46 @@
                         <i class='bx bx-search'></i>
                         <i class='bx bx-filter'></i>
                     </div>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Users</th>
-                            <th>Date Joined</th>
-                            <th>Status</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <img src="{%static 'img/449181880_1484650349104562_652231313086318225_n.jpg'%}" alt="">
-                                <p>John Doe</p>
-                            </td>
-                            <td>
-                                01-10-2021
-                            </td>
-                            <td>
-                                <span class="status completed">Completed</span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <img src="{%static 'img/449181880_1484650349104562_652231313086318225_n.jpg'%}" alt="">
-                                <p>John Doe</p>
-                            </td>
-                            <td>
-                                01-10-2021
-                            </td>
-                            <td>
-                                <span class="status pending">Pending</span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <img src="{%static 'img/449181880_1484650349104562_652231313086318225_n.jpg'%}" alt="">
-                                <p>John Doe</p>
-                            </td>
-                            <td>
-                                01-10-2021
-                            </td>
-                            <td>
-                                <span class="status completed">Completed</span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <img src="{%static 'img/449181880_1484650349104562_652231313086318225_n.jpg'%}" alt="">
-                                <p>John Doe</p>
-                            </td>
-                            <td>
-                                01-10-2021
-                            </td>
-                            <td>
-                                <span class="status process">Process</span>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Users</th>
+                                <th class="pr-2">Role</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for pending_user in pending_users %}
+                            <tr>
+                                <td>
+                                    <a href="{{ pending_user.profile_photo.url }}" data-lightbox="user-image" data-title="{{ pending_user.first_name }}">
+                                        <img src="{{ pending_user.profile_photo.url }}" alt="{{ pending_user.first_name }}" class="thumbnail">
+                                    </a>                                    
+                                    
+                                    <p class="pl-5">{{ pending_user.first_name }} {{ pending_user.last_name }}</p>
+                                </td>
+                                <td>
+                                    <p class="pr-2">{{ pending_user.role }}</p>
+                                </td>
+                                <td>
+                                    <a href="{%url 'approve_user' user_id=pending_user.id%}" class="status completed">Approve</a>
+                                </td>
+                                <td>
+                                    <div class="px-3">
+
+                                        <a href="{%url 'decline_users' user_id=pending_user.id%}" class="status bg-red-500">Decline</a>
+                                    </div>
+                                </td>
+                            </tr>
+                            {% empty %}
+                            <tr>
+                                <td colspan="3">No pending users.</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                    
+                    
             </div>
                 <div class="todo">
                     <div class="head">
