--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
 {% url 'testimonial_page' as testimonial_url %}
 {% url 'page_404' as page_404_url %}
 {% url 'contact_page' as contact_url %}
-{% url 'dashboard_page' as dashboard_url %}
+{% url 'admin_dashboard' as dashboard_url %}
 {% url 'register' as register_url %}
 {% url 'login' as login_url %}
 
