--- a/templates/dashboards/students.html
+++ b/templates/dashboards/students.html
@@ -76,7 +76,7 @@
                 <span class="num">8</span>
             </a>
             <a href="#" class="profile">
-                <img src="{{ request.user.student_profile.profile_photo.url }}" alt="Profile Photo">
+                <img src="{{ request.user.profile_photo.url }}" alt="Profile Photo">
             </a>
         </nav>
         <!-- END OF NAVBAR -->
