--- a/templates/dashboards/teachers.html
+++ b/templates/dashboards/teachers.html
@@ -70,7 +70,7 @@
                 <span class="num">8</span>
             </a>
             <a href="#" class="profile">
-                <img src="{{ request.user.teacher_profile.profile_photo.url }}" alt="Profile Photo">
+                <img src="{{ request.user.profile_photo.url }}" alt="Profile Photo">
             </a>
          </nav>
         <!-- END OF NAVBAR -->
