--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -5,7 +5,7 @@
 <div class="min-h-screen flex items-center justify-center bg-background">
     <div class="bg-card shadow-lg rounded-lg p-8 max-w-sm w-full">
         <h2 class="text-2xl font-semibold text-primary text-center mb-6 text-black">Register</h2>
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% if form.non_field_errors %}
                 <div class="mb-4 text-red-500 text-center">
@@ -30,6 +30,11 @@
                     </div>
                 {% endif %}
             </div>
+            <div class="mb-4">
+                <p class="text-black bg-yellow-500 text-sm p-1 rounded-sm">student should take photo wearing their uniform.</p>
+                {{ form.profile_photo.label_tag }}
+                {{ form.profile_photo }}
+              </div>        
             <div class="mb-6">
                 {{ form.password1.label_tag }}
                 {{ form.password1 }}
