--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -399,6 +399,14 @@ body {
     overflow-x: auto;
 }
 
+.table-data > div {
+    border-radius: 20px;
+    background: var(--light);
+    padding: 24px;
+    overflow-x: auto;
+    margin: 24px;
+}
+
 #content main .table-data .head {
     display: flex;
     align-items: center;
