--- a/templates/dashboards/all_admin_pages/myStudents.html
+++ b/templates/dashboards/all_admin_pages/myStudents.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block section %}
 <div class="m-3 rounded-lg">
-    <p class="text-center p-5 mb-3 rounded-lg font-medium" style="background-color: #F9F9F9;">ALL STUDENT</p>
+    <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">ALL STUDENT</p>
     <div class="order flex">
         <div class="grid grid-cols sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
             {%if student%}
