--- a/templates/dashboards/all_admin_pages/myTeachers.html
+++ b/templates/dashboards/all_admin_pages/myTeachers.html
@@ -1,8 +1,8 @@
 {% extends 'dashboards/all_admin_pages/base.html' %}
 {% load static %}
 {% block section %}
-<div class="m-3 rounded-lg">
-    <p class="text-center p-5 mb-3 rounded-lg font-medium" style="background-color: #F9F9F9;">ALL TEACHERS</p>
+<div class="m-3 rounded-lg text-black">
+    <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">ALL TEACHERS</p>
     <div class="order flex">
         <div class="grid grid-cols sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
             {%if teacher%}
